; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkrasimage.c_unmap_file.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkrasimage.c_unmap_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file_info = type { i32, i32, i32 }

@.str = private unnamed_addr constant [25 x i8] c"Error unmapping file %s.\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unmap_file(%struct.file_info* %0) #0 {
  %2 = alloca %struct.file_info*, align 8
  store %struct.file_info* %0, %struct.file_info** %2, align 8
  %3 = load %struct.file_info*, %struct.file_info** %2, align 8
  %4 = getelementptr inbounds %struct.file_info, %struct.file_info* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.file_info*, %struct.file_info** %2, align 8
  %7 = getelementptr inbounds %struct.file_info, %struct.file_info* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @munmap(i32 %5, i32 %8)
  %10 = icmp eq i32 %9, -1
  br i1 %10, label %11, label %18

11:                                               ; preds = %1
  %12 = load %struct.file_info*, %struct.file_info** %2, align 8
  %13 = getelementptr inbounds %struct.file_info, %struct.file_info* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @ERR(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load i32, i32* @EXIT_FAILURE, align 4
  %17 = call i32 @exit(i32 %16) #3
  unreachable

18:                                               ; preds = %1
  ret void
}

declare dso_local i32 @munmap(i32, i32) #1

declare dso_local i32 @ERR(i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
